fix: change navbar menu visible

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,8 +9,6 @@
     display: flex
     justify-content: flex-end
     align-items: center   
-    &--visible
-      display: none
     &__button
       display: none
   &__logo
